# libopendbx

./: AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.in  TODO  aclocal.m4  config.h.in  configure  configure.ac  libopendbx.spec  libopendbx.spec.in  libopendbx1.pc  libopendbxplus1.pc  opendbx.spec  opendbx.spec.in  opendbxplus.pc
backends/: Makefile.am  Makefile.in
backends/firebird/: Makefile.am  Makefile.in  firebird_basic.c  firebird_basic.h  firebird_lo.c  firebird_lo.h  firebirdbackend.c
backends/mssql/: Makefile.am  Makefile.in  mssql_basic.c  mssql_basic.h
backends/mysql/: Makefile.am  Makefile.in  mysql_basic.c  mysql_basic.h  mysqlbackend.h
backends/odbc/: Makefile.am  Makefile.in  odbc_basic.c  odbc_basic.h  odbc_lo.c  odbc_lo.h  odbcbackend.c  odbcbackend.h
backends/oracle/: Makefile.am  Makefile.in  oracle_basic.c  oracle_basic.h  oracle_lo.c  oracle_lo.h  oraclebackend.c  oraclebackend.h
backends/pgsql/: Makefile.am  Makefile.in  pgsql_basic.c  pgsql_basic.h
backends/sqlite/: Makefile.am  Makefile.in  sqlite_basic.c  sqlite_basic.h
backends/sqlite3/: Makefile.am  Makefile.in  sqlite3_basic.c  sqlite3_basic.h  sqlite3backend.h
backends/sybase/: Makefile.am  Makefile.in  sybase_basic.c  sybase_basic.h
debian/: changelog  control  copyright  rules
doc/: Doxyfile  Makefile.am  Makefile.in  opendbx.en.xml
lib/: Makefile.am  Makefile.in  libopendbxplus.ver  odbx.c  odbx.cpp  odbx_iface.hpp  odbx_impl.cpp  odbx_impl.hpp  odbxdrv.h  odbxlib.c  odbxlib.h  odbxlog.h
lib/opendbx/: api  api.h  api.h.in  api.hpp
po/: Makevars  POTFILES.in  de.gmo  de.po  en@quot.gmo  en@quot.po  opendbx.pot
test/: Makefile.am  Makefile.in  odbx-regression.c  odbx-regression.h  odbxplus-regression.cpp  odbxplus-threads.cpp  odbxtest.sh
test/ref/: firebird.ref  mssql.ref  mysql.ref  odbc.ref  oracle.ref  pgsql.ref  sqlite.ref  sqlite3.ref
trunk/: ChangeLog  Makefile.in  configure  libopendbx.spec  libopendbx.spec.in  libopendbxplus1.pc
trunk/backends/firebird/: Makefile.in
trunk/backends/mssql/: Makefile.am
trunk/backends/mysql/: Makefile.am  mysql_basic.c  mysql_basic.h
trunk/backends/odbc/: Makefile.in
trunk/backends/oracle/: Makefile.in  oracle_basic.c  oracle_basic.h
trunk/backends/pgsql/: Makefile.am  Makefile.in  pgsql_basic.h
trunk/backends/sqlite/: Makefile.am  sqlite_basic.c  sqlite_basic.h
trunk/backends/sqlite3/: Makefile.in  sqlite3_basic.c
trunk/doc/: Doxyfile  opendbx.en.xml
trunk/lib/: Makefile.am  libopendbx.ver  odbx.c  odbx_iface.hpp  odbx_impl.cpp  odbx_impl.hpp  odbxlib.h
trunk/lib/opendbx/: api
trunk/po/: Makevars  POTFILES.in  en@quot.po  opendbx.pot
trunk/test/: odbx-regression.c  odbxplus-regression.cpp  odbxtest.sh
trunk/test/ref/: sybase.ref
trunk/utils/: Makefile.am  argmap.hpp
trunk/utils/doc/: Makefile.in
trunk/utils/po/: Makefile.in  de.po  en@quot.po  opendbx-utils.pot
utils/: Makefile.am  Makefile.in  argmap.cpp  commands.cpp  commands.hpp  completion.cpp  completion.hpp  config.cpp  config.hpp  odbx-sql.cpp  odbx-sql.hpp
utils/doc/: Makefile  Makefile.am  Makefile.in  opendbx-utils.en.xml
utils/po/: Makefile.in  POTFILES.in  de.po  en@quot.po  opendbx-utils.pot
